# StringBeat

./: CMakeLists.txt  README.md
FileConverter/: converter.c  decode.c  hdump.csv  sbdecode
assets/: CommandLetter.pdn  hdump.csv  longboi(texture).iqm  longboi(vibe).iqm
libs/raylib/src/: models.c
shaders/: getnormal.vs  veclighting.fs
songs/king/: beatmap.sb  hdump.csv
songs/night of knights cranky/: beatmap.sb
songs/pop on rocks/: beatmap.sb
songs/pursuit ~ cornered/: beatmap.sb
songs/reachout/: beatmap.sb
songs/sugarsong/: beatmap.sb
src/: animstates.c  animstates.h  commandinterpret  commandinterpret.c  commandinterpret.h  main.c  utils.c  utils.h
